Spacing fix.

--- a/app/assets/stylesheets/_site.scss
+++ b/app/assets/stylesheets/_site.scss
@@ -3562,7 +3562,7 @@ $saved-search-control-height: 48px;
         margin-bottom: .4em;
         .favicon-wrap {
             left: -30px;
-            top: 0;
+            top: -2px;
         }
     }
     .tweet-text {
